# tourney

./: .gitignore  CLAUDE.md  Makefile  README.md  bracket.txt  game_delta.py  get_data.py  make_markets.py  portfolio_value.py  portfolio_value_reference.py  pyproject.toml  team_names.py  team_names.yaml  tourney_scorer.py  tourney_utils.py
.claude/: settings.local.json
.github/: README.md
.github/workflows/: e2e-pr.yml  warm-dependency-caches.yml
api/: __init__.py  database.py  main.py  models.py  utils.py
api/routers/: analysis.py  market.py  portfolio.py  tournament.py
api/services/: cix_service.py  portfolio_service.py  tournament_service.py
cix_client/: __init__.py  client.py  exceptions.py
docs/: frontend-architecture.md
scripts/e2e/: create_db_snapshot.py
src/tourney_core/: Cargo.toml
src/tourney_core/benches/: benchmark.rs
src/tourney_core/src/: constants.rs  game_transform.rs  lib.rs  overrides.rs  portfolio.rs  team.rs  tournament.rs  win_prob.rs
tests/: conftest.py  test_api_rules.py  test_cix_client.py  test_equivalence.py  test_performance.py  test_team_names.py
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/cases/: CASE-001-dashboard-bracket-teamdetail-trade.md  CASE-002-whatif-scenario-lifecycle.md  CASE-003-completed-games-record-remove.md  CASE-004-isolation-writer.md  CASE-005-isolation-clean-start.md  CASE-006-teamdetail-marketmaker-defaults.md  CASE-006-url-navigation-state-roundtrip.md  CASE-007-teamdetail-marketmaker-propagation.md  README.md
web/e2e/fixtures/: e2e.ts
web/e2e/snapshots/: base.sqlite3
web/e2e/support/: backend.ts  ports.ts
web/scripts/: generate-e2e.mjs
web/src/: App.tsx  index.css
web/src/api/: analysis.ts  client.ts  index.ts  market.ts  portfolio.ts  tournament.ts
web/src/components/Bracket/: BracketPreview.tsx  BracketView.tsx  MetaTeamModal.tsx  (+5 more)
web/src/hooks/: useMarket.ts  usePortfolio.ts  useTournament.ts
web/src/store/: uiStore.ts
web/src/types/: index.ts
web/src/utils/: bracketTree.ts  navigationUrlState.ts
(+23 files in other folders)
