[project]
name = "tourney"
version = "0.1.0"
description = "NCAA Tournament scoring and portfolio analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "numpy>=2.4.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "selenium>=4.40.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "src/tourney_core/Cargo.toml"
module-name = "tourney_core"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "pytest>=9.0.2",
    "selenium>=4.40.0",
]
